--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,18 @@
             "email": "colin1124x@gmail.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@rde-gitlab.vir888.com:colin1124x/application"
+        }
+    ],
     "require": {
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.2"
+        "phpunit/phpunit": "<=4.2",
+        "rde/application": "*"
     },
     "autoload": {
         "psr-4": {
