--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "<=4.2",
-        "rde/application": "*"
+        "rde/application": "~1"
     },
     "autoload": {
         "psr-4": {
@@ -24,5 +24,6 @@
             "Fake\\": "fake/"
         }
     },
+    "preferred-install": "source",
     "minimum-stability": "dev"
 }
