調整"preferred-install" 為 "dist"

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
             "Fake\\": "fake/"
         }
     },
-    "preferred-install": "source",
+    "preferred-install": "dist",
     "minimum-stability": "dev"
 }
