--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "<=4.2",
+        "phpunit/phpunit": "~4",
         "rde/application": "~1"
     },
     "autoload": {
@@ -24,6 +24,9 @@
             "Fake\\": "fake/"
         }
     },
-    "preferred-install": "dist",
-    "minimum-stability": "dev"
+    "config": {
+        "preferred-install": "dist"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
