--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4",
-        "rde/application": "~1"
+        "rde/container": "~1"
     },
     "autoload": {
         "psr-4": {
